# perception_scale

./: .gitignore  AITD_fbank.py  BFCC_spafe.py  ERB_feature.py  GFCC_feature_spafe.py  Gammatone_fbanks_spafe.py  Gammatone_feature_time.py  Linear_filterbanks.py  MFCC_features.py  MFCC_spafe.py  PercepNet_erb.py  README.md  RNNoise_band_energy.py  Triangular_filter_bank.py  Triangular_filter_bank_RNNoise.py  bark_fbank.py  cos_fbank.py  gammatone_fbanks_spafe.py  linear_fbank.py  mel_fbank.py  ops.py  scale_plot.py  语谱图可视化.py
Q_and_A/: GFCC_feature_11.py  GFCC_feature_12.py  Gammatone_feature_2.py  Gammatone_feature_3.py  dot_demo.py
Q_and_A/erb_bands-master/: README.md  erb.py  main.py  temp.py
参考/Acoustic_features/: bark_extractor.py  gamma_extractor.py  lpc_formants.py  mel_extractor.py
参考/Gammatone-filters-master_C/: README.md  efficiency.py  example.py  filter_spectrum.py  freq_rannge.py  gain_normalization.py  phase_compensation.py  stimulus_restore.py  validate.py
参考/Gammatone-filters-master_C/BasicTools/: Dataset_parallel.py  DspTools.py  GCC.py  GPU_Filter.py  GPU_Filter_tf1.14.py  Iterator.py  Logger.py  ProgressBar.py  ProgressBarMulti.py  ProgressBar_test.py  VAD.py  cal_snr.py  easy_parallel.py  fft.py  (+24 more)
参考/RNNoise_feature/: CMakeLists.txt  main.c  noise.pcm
参考/py_bank-master/: README.md  filterbanks.py
参考/pyfilterbank-master(求mel的思路十分其他，没有ERB有Gammatone)总结的很好/: README.md  __init__.py  gammatone.py  melbank.py  sosfiltering.py
参考/speech_feature_extractor-master(GFCC没有公式,看上去写的乱七八糟)/: README.md  cochleagram_extractor.py  feature_extractor.py
(+15 files in other folders)
